--- a/secscan.man.html
+++ b/secscan.man.html
@@ -282,9 +282,9 @@ shell is being used pro temp.
 </p>
 <h2 id="heading9">SEE ALSO</h2>
 <p class="indent">
-<a href="./scripts.php?script=chkdf&man=y"><i>chkdf</i>,</a>
-<a href="./scripts.php?script=chkftpd&man=y"><i>chkftpd</i>,</a>
-<a href="./scripts.php?script=chkfw&man=y"><i>chkfw</i>.</a>
+<a href="./scripts.php?script=chkdf&amp;man=y"><i>chkdf</i>,</a>
+<a href="./scripts.php?script=chkftpd&amp;man=y"><i>chkftpd</i>,</a>
+<a href="./scripts.php?script=chkfw&amp;man=y"><i>chkfw</i>.</a>
 </p>
 <h2 id="heading10">AUTHOR</h2>
 <p class="indent">
