--- a/secscan.man.html
+++ b/secscan.man.html
@@ -83,14 +83,17 @@ The
 option allows a file to be removed from the list of files associated with the
 prescence of a particular root kit.
 </p>
-<p class="indent">
-This option arises from use on a
+<p class="indent"> 5
+This option arises from the use of
+<b><a href="./scripts.php?script=secscan">secscan</a></b>
+on a
 <b>Slackware</b>
 host where the quite legitimate presence of 
 <i>"/etc/ssh/sshd_config"</i>
 generates a warning regarding a possible infection of Dica-Kit from 
 <b>rkhunter.</b>
-<br/>
+</p>
+<p class="indent">
 The use of 
 <b>-a Dica-Kit:/etc/ssh/sshd_config</b>
 will create an amended temporary version of
