--- a/secscan.man.html
+++ b/secscan.man.html
@@ -84,7 +84,7 @@ The
 option allows a file to be removed from the list of files associated with the
 prescence of a particular root kit.
 </p>
-<p class="indent"> 5
+<p class="indent">
 This option arises from the use of
 <b><a href="./scripts.php?script=secscan">secscan</a></b>
 on a
