--- a/secscan.man.html
+++ b/secscan.man.html
@@ -91,15 +91,17 @@ on a
 <b>Slackware</b>
 host where the quite legitimate presence of 
 <i>"/etc/ssh/sshd_config"</i>
-generates a warning regarding a possible infection of Dica-Kit from 
-<b>rkhunter.</b>
+generates a warning from
+<b>rkhunter</b>
+regarding a possible infection by 
+<b>Dica-Kit.</b>
 <br/>
 <br/>
 The use of 
 <b>-a Dica-Kit:/etc/ssh/sshd_config</b>
-will create an amended temporary version of
+will create an amended, temporary version of
 <b>rkhunter</b>
-which has 
+which has had 
 <i>sshd_config</i>
 removed from the list of files associated with
 <i>Dica-Kit</i>.
