--- a/secscan.man.html
+++ b/secscan.man.html
@@ -83,8 +83,8 @@ The
 <b>-a</b>&nbsp;&nbsp;&nbsp;
 option allows a file to be removed from the list of files associated with the
 prescence of a particular root kit.
-<br/>
-<br/>
+</p>
+<p class="indent">
 This option arises from the use of
 <b><a href="./scripts.php?script=secscan">secscan</a></b>
 on a
