--- a/secscan.man.html
+++ b/secscan.man.html
@@ -109,6 +109,7 @@ removed from the list of files associated with
 <b>-c </b>
 <i>&lt;configuration_file&gt;</i>
 
+<br/>
 By default 
 <b><a href="./scripts.php?script=secscan">secscan</a></b>
 finds the configuration using a default path and
@@ -129,7 +130,9 @@ checksums generated. By default the checksums are stored in
 </p>
 <p class="indent">
 <b>-d</b>&nbsp;&nbsp;&nbsp;
-set debug mode. The
+set debug mode.
+
+The
 <b>-x </b>
 option will be set for the shell and a number of break points will be used to
 allow output to be considered before proceeding.
@@ -139,6 +142,7 @@ allow output to be considered before proceeding.
 <b>-e</b>&nbsp;&nbsp;&nbsp;
 <i> &lt;recipient&gt;</i>
 
+<br/>
 By default alerts are sent to the
 <b>root</b>
 user on the host invoking
