--- a/secscan.man.html
+++ b/secscan.man.html
@@ -297,6 +297,12 @@ which has had
 removed from the list of files associated with
 <i>Dica-Kit</i>.
 </p>
+<p class="indent">
+The amended 
+<b>rkhunter</b>
+will then be run against the host 
+<b>merlin.</b>
+</p>
 <h2 id="heading8">BUGS</h2>
 <p class="indent">
 The script has very little input error checking. Name resolution and
